--- a/src/styles.css
+++ b/src/styles.css
@@ -1,1 +1,81 @@
 /* You can add global styles to this file, and also import other style files */
+@import '../node_modules/@angular/material/prebuilt-themes/deeppurple-amber.css';
+@import 'https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css';
+@import '../node_modules/@fortawesome/fontawesome-free/css/all.css';
+
+.page-container {
+  display: grid;
+  grid-template-columns: 60px auto;
+  height: 100%;
+  padding: 0px;
+}
+
+.side-bar {
+  background: #252223;
+}
+
+.nav-link {
+  color: #FFF;
+  font-size: 12px;
+}
+
+
+.content-container {
+  margin-top: 30px;
+}
+
+.dropdown-toggle {
+  cursor: pointer;
+}
+.transaction-input{
+  font-size: 10px;
+}
+
+.section-header{
+  font-size: 12px;
+  width: 100%;
+  background: lightgray;
+  padding: 15px;
+}
+
+table {
+  border-collapse: collapse;
+}
+.transaction-table{
+  border-radius: 10px;
+  width: 100%;
+  margin-right: 10px;
+}
+
+.transaction-table th{
+  align-content: center;
+  text-align: center;
+  padding: 5px;
+  font-size: 10px;
+}
+.transaction-table tr{
+  text-align: center;
+}
+
+.transaction-table td {
+  widtth: 100%;
+  font-size: 10px;
+}
+
+.transaction-input-style {
+  font-size: 15px;
+  border-radius: 5px;
+}
+
+.icon-submit-button, input[type="submit"] {
+  background: none;
+  color: inherit;
+  border: none;
+  padding: 0;
+  font: inherit;
+  outline: inherit;
+}
+
+.padRight20 {
+  padding-right: 20px;
+}
