--- a/src/app/account/account-list/account-list.component.html
+++ b/src/app/account/account-list/account-list.component.html
@@ -1,7 +1,7 @@
 <div class="row">
   <div class="col-md-4 offset-md-1">
     <div class="input-group">
-      <input type="text" class="form-control" placeholder="Search by name..." (change)="rangeChange($event.value)" (keyup.enter)="rangeChange($event.value)">
+      <input type="text" class="form-control" placeholder="Search by name..." (input)="rangeChange($event.target.value)" (keyup.enter)="rangeChange($event.value)">
       <div class="input-group-append">
         <span class="input-group-text"><ion-icon class="icon" name="search"></ion-icon></span>
       </div>
