--- a/src/styles.css
+++ b/src/styles.css
@@ -79,3 +79,11 @@ table {
 .padRight20 {
   padding-right: 20px;
 }
+
+.table-margin {
+  margin-left: 10px;
+  margin-right: 10px;
+}
+.center{
+  text-align: center;
+}
