--- a/src/app/account/update-account/update-account.component.html
+++ b/src/app/account/update-account/update-account.component.html
@@ -31,14 +31,14 @@
             <label>Balance</label>
             <div class="input-group-prepend">
               <span class="transaction-input-style input-group-text" style="font-size: 12px;" id="dollar-addon-1">$</span>
-              <input matInput  placeHolder="Current Balance" class="form-control currency transaction-input-style" formControlName="currentBalance" type="number" min="0.00" step="0.01" data-number-to-fixed="2"
-                     (change)="updateAmount($event.target['value'])">
+              <input matInput  (ngModel)="accountBalance" [value]="accountBalance | currency: 'symbol':''" placeHolder="Current Balance" class="form-control input-style" formControlName="currentBalance" type="text">
             </div>
-            </mat-form-field>
+          </mat-form-field>
           <ng-container *ngFor="let validation of validation_messages.currentBalance">
             <mat-err *ngIf="updateForm.get('currentBalance').hasError(validation.type) && (updateform.get('currentBalance').dirty || updateForm.get('currentBalance').touched)">validation.message</mat-err>
           </ng-container>
         </div>
+
         <div class="row submit-button-container">
           <div class="col-md-4">
             <button mat-raised-button class="submit-button" color="primary" type="submit" [disabled]="!updateForm.valid">Update Account</button>
