--- a/src/app/bs-navbar/bs-navbar.component.html
+++ b/src/app/bs-navbar/bs-navbar.component.html
@@ -12,6 +12,15 @@
       <li class="nav-item">
         <a class="nav-link active" [routerLink]="'budgetplan'" tabindex="-1" aria-disabled="false">Plan</a>
       </li>
+      <li class="nav-item dropdown">
+        <a href="#" class="nav-link dropdown-toggle" id="budgetPlanDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+          Plan
+        </a>
+        <div class="dropdown-menu" aria-labelledby="budgetPlanDropdown">
+          <a [routerLink]="'budgetsummary'" class="dropdown-item">Summary</a>
+          <a [routerLink]="'budgetplan'" class="dropdown-item">Plan</a>
+        </div>
+      </li>
       <li class="nav-item">
         <a class="nav-link" [routerLink]="'transactions'">Transactions</a>
       </li>
