--- a/src/app/budget/budget-plan/budget-plan.component.html
+++ b/src/app/budget/budget-plan/budget-plan.component.html
@@ -4,5 +4,8 @@
     <td style="vertical-align: top">
     <app-account-summary></app-account-summary>
     </td>
+    <td style="vertical-align: top">
+      <app-budget-plan-edit></app-budget-plan-edit>
+    </td>
   </tr>
 </table>
