--- a/src/app/home/components/home/home.component.html
+++ b/src/app/home/components/home/home.component.html
@@ -5,7 +5,7 @@
       <app-account-summary></app-account-summary>
     </td>
     <td style="vertical-align: top">
-        <app-category-summary></app-category-summary>
+        <!-- <app-category-summary></app-category-summary> -->
     </td>
   </tr>
 </table>
